--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ tokio = { version = "1.37.0", features = ["net", "rt-multi-thread", "macros"] }
 twitch_api = { version = "0.7.0-rc.7", features = ["eventsub", "reqwest", "helix"] }
 twitch_events_listener = { path = "../twitch_events_listener/" }
 change_helix_theme = { path = "../change_helix_theme/" }
+change_alacritty_font = { path = "../change_alacritty_font/" }
 
