--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ change_alacritty_font = { path = "../change_alacritty_font/" }
 frontend = { path = "frontend" }
 
 twitch_api = { features = ["helix", "reqwest", "eventsub"], git = "https://github.com/twitch-rs/twitch_api", rev = "788c4ea" }
+rand = "0.8.5"
 [patch.crates-io.twitch_types]
 git = "https://github.com/twitch-rs/twitch_api"
 # path = "../../forks/twitch_api/twitch_types"
